syntax = "proto3";
option java_package = "com.fineapple.toda.api.models.protobuffers";
option java_outer_classname = "UserFcmProto";

message UserFcm {
  map<string, int64> tokenID = 1;
  map<string, int32> tokenStatus = 2;
}